--- a/description.html
+++ b/description.html
@@ -34,12 +34,12 @@
     <div class="container">
 
         <div class="slides">
-            <div><img src="./img/img.jpg" alt=""></div>
-            <div><img src="./img/img.jpg" alt=""></div>
-            <div><img src="./img/img.jpg" alt=""></div>
-            <div><img src="./img/img.jpg" alt=""></div>
-            <div><img src="./img/img.jpg" alt=""></div>
-            <div><img src="./img/img.jpg" alt=""></div>
+            <div><img src="./img/img1.jpg" alt=""></div>
+            <div><img src="./img/img1.jpg" alt=""></div>
+            <div><img src="./img/img1.jpg" alt=""></div>
+            <div><img src="./img/img1.jpg" alt=""></div>
+            <div><img src="./img/img1.jpg" alt=""></div>
+            <div><img src="./img/img1.jpg" alt=""></div>
         </div><!-- /.slides -->
     </div>
 
